extendednav in mobile spacing fixed and basket summary in mobile styled

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -1923,6 +1923,12 @@ input[type=search], input[type=text] .signupform fieldset input {
                         top: 0;
                         width: 130px;
                     }
+                    @media @mobile {
+                      position: relative;
+                      top: 0;
+                      right: 0;
+                      text-align: left;
+                    }
                 }
                 // Quantity button
                 .basket-summary-quantitybtn {
@@ -2467,6 +2473,6 @@ input[type=search], input[type=text] .signupform fieldset input {
 		padding: 5px 10px 5px 0;
 	}
 	  .widget .extendednavigation ul li.folder .text {
-  		padding: 0px 20px 0 0;
+  		padding: 5px 20px 5px 0;
   	}
 }
